made the connect now button work

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -50,13 +50,15 @@
 
 
 
-
 <!-- Teacher Profile Modal -->
 <div id="modal<%= user.id %>" class="modal modal-fixed-footer">
   <div class="modal-header white">
     <div class="right modal-btns">
     <a class="waves-effect waves-light btn dark grey rounded-btn lighten-3">Message</a>&nbsp&nbsp&nbsp
-    <a class="waves-effect waves-light btn green accent-4 rounded-btn btn tooltipped" data-position="top" data-delay="50" data-tooltip="Connect with <%= user.name %>">Connect Now</a>
+    <% if user.host_rooms %>
+    <% @room_number = Room.where(teacher_id: user.id).last.id %>
+    <a href="rooms/<%= @room_number %>/show" class="waves-effect waves-light btn green accent-4 rounded-btn btn tooltipped" data-position="top" data-delay="50" data-tooltip="Connect with <%= user.name %>">Connect Now</a>
+    <% end %>
     </div>
     <div class="clearfix"></div>
     <div class="row">
