--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -32,7 +32,10 @@
           <% else %>
             <% @create_room = "hidden" %>
           <% end %>
-            <li id="create-room" data-host="<%= current_user.has_taught %>"><a href="/rooms/create" target="_blank" class="waves-effect waves-light rounded-btn green accent-4 btn <%= @create_room %>">Create Room</a></li>
+          <% if @status = "online" %>
+          <% else %>
+              <li id="create-room" data-host="<%= current_user.has_taught %>"><a href="/rooms/create" target="_blank" class="waves-effect waves-light rounded-btn green accent-4 btn <%= @create_room %>">Create Room</a></li>
+          <% end %>
 
            <% if @in_room %>
             <li><a id="timer_button" class="waves-effect waves-light rounded-btn green accent-4 btn tooltipped" data-position="left" data-delay="50" data-tooltip="Timer will begin"><span id="timer_text">Start Session</span></a></li>
@@ -52,10 +55,10 @@
               <% @user_status = "Go Online" %>           
             <% end %>
             <% if current_user.is_online %>
-                <% @power_btn = "on" %>
-              <% else %>
-                <% @power_btn = "off" %>
-              <% end %>
+              <% @power_btn = "on" %>
+            <% else %>
+              <% @power_btn = "off" %>
+            <% end %>
             <li><a id="status-tip" href="#" class="tooltipped" data-position="right" data-delay="50" data-tooltip="<%= @user_status %>"><i id="power-on" data-current-user-id="<%= current_user.id %>" class="fa fa-power-off fa-2x <%= @power_btn %>"></i></a></li>
             <!-- end  -->
           <%end%>
