fixed create room button

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -27,21 +27,20 @@
         <div class="row">
 
         <% if current_user %>
-          <% if current_user.is_online %>
-            <% @create_room = "visible" %>
-          <% else %>
-            <% @create_room = "hidden" %>
-          <% end %>
-          <% if @status = "online" %>
-          <% else %>
-              <li id="create-room" data-host="<%= current_user.has_taught %>"><a href="/rooms/create" target="_blank" class="waves-effect waves-light rounded-btn green accent-4 btn <%= @create_room %>">Create Room</a></li>
-          <% end %>
 
            <% if @in_room %>
             <li><a id="timer_button" class="waves-effect waves-light rounded-btn green accent-4 btn tooltipped" data-position="left" data-delay="50" data-tooltip="Timer will begin"><span id="timer_text">Start Session</span></a></li>
             <li><a href="/host_room" id="leave-room" href="#" class="tooltipped" data-position="right" data-delay="50" data-tooltip="End Session"><i id="end-session" class="fa fa-power-off fa-2x"></i></a></li>
           <% else %>
-            <li><a class='dropdown-button hide-on-med-and-down' href='#' data-beloworigin='true' data-activates='dropdown1'><%= current_user.name.upcase %> <i class="fa fa-chevron-down"></i></a></li>
+            <% if current_user.is_online %>
+              <% @create_room = "visible" %>
+            <% else %>
+              <% @create_room = "hidden" %>
+            <% end %>
+            <span id="butt2" class="<%= @create_room %>">
+            <li id="create-room" data-host="<%= current_user.has_taught %>"><a href="/rooms/create" target="_blank" class="waves-effect waves-light rounded-btn green accent-4 btn">Create Room</a></li>
+            </span>
+            <li><a class='dropdown-button hide-on-med-and-down' href='#' data-beloworigin='true' data-activates='dropdown1'><%= current_user.name %> <i class="fa fa-chevron-down"></i></a></li>
               <ul id='dropdown1' class='dropdown-content'>
                 <li><a href="/user/profile"><span class="left">View Profile </span> <i class="fa fa-user right"></i></a></li>
                 <li><a href="/user/settings"><span class="left">Edit Profile </span><i class="fa fa-cog right"></i></a></li>
