Can now update interests ONE AT A TIME

--- a/app/views/user/edit.erb
+++ b/app/views/user/edit.erb
@@ -20,16 +20,16 @@
         </div>
 
       <div class="input-field">
-        <select multiple>
+        <select method="post" name="categories">
           <option value="" disabled selected>Choose Categories</option>
-          <option value="computers">Computers</option>
-          <option value="finance">Finance</option>
-          <option value="legal">Legal</option>
-          <option value="design">Design</option>
-          <option value="sports">Sports</option>
-          <option value="gaming">Gaming</option>
-          <option value="food">Food</option>
-          <option value="adult">Adult</option>
+          <option value="Computers">Computers</option>
+          <option value="Finance">Finance</option>
+          <option value="Legal">Legal</option>
+          <option value="Design">Design</option>
+          <option value="Sports">Sports</option>
+          <option value="Gaming">Gaming</option>
+          <option value="Food">Food</option>
+          <option value="Adult">Adult</option>
         </select>
       </div>
     <input type="submit" class="waves-effect waves-light rounded-btn green accent-4 btn">
