--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -74,14 +74,15 @@
       <!-- <img src="http://placehold.it/160x65"> -->
     </div>
       <li class="active"><a href="/">Home</a></li>
-      <li class="filter" id="all"><a href="#!">All</a></li>
-      <li class="filter" id="finance"><a href="#!">Finance</a></li>
-      <li class="filter" id="legal"><a href="#!">Legal</a></li>
-      <li class="filter" id="design"><a href="#!">Design</a></li>
-      <li class="filter" id="sports"><a href="#!">Sports</a></li>
-      <li class="filter" id="gaming"><a href="#!">Gaming</a></li>
-      <li class="filter" id="food"><a href="#!">Food</a></li>
-      <li><a class="modal-trigger" href="#explicit">Adult</a></li>
+      <li class="filter" id="All"><a href="#!">All</a></li>
+      <li class="filter" id="Computers"><a href="#!">Computers</a></li>
+      <li class="filter" id="Finance"><a href="#!">Finance</a></li>
+      <li class="filter" id="Legal"><a href="#!">Legal</a></li>
+      <li class="filter" id="Design"><a href="#!">Design</a></li>
+      <li class="filter" id="Sports"><a href="#!">Sports</a></li>
+      <li class="filter" id="Gaming"><a href="#!">Gaming</a></li>
+      <li class="filter" id="Food"><a href="#!">Food</a></li>
+      <li><a class="modal-trigger" id="href="#explicit">Adult</a></li>
   </ul>
 <body>
 
