Bug fix with edit page)

--- a/app/views/user/edit.erb
+++ b/app/views/user/edit.erb
@@ -20,7 +20,7 @@
         </div>
 
       <div class="input-field">
-        <select method="post" name="categories">
+        <select method="post" name="categories" multiple>
           <option value="" disabled selected>Choose Categories</option>
           <option value="Computers">Computers</option>
           <option value="Finance">Finance</option>
