added account balance

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <!-- Themes -->
-<div  class="fixed-action-btn verticle" style="top: 100px; right: 120px;">
+<div  class="fixed-action-btn verticle hide-on-med-and-down " style="top: 100px; right: 120px;">
   <a class="btn-floating btn-medium grey darken-4"><i class="large material-icons">add</i></a>
   <ul>
     <li><a id="theme-1" class="btn-floating grey darken-3">1</a></li>
