sort users by online, default bio and specialties

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -76,8 +76,7 @@
     <a href="/"><img id="logo" src="/images/logo1.svg"></a>
       <!-- <img src="http://placehold.it/160x65"> -->
     </div>
-      <li class="active"><a href="/">Home</a></li>
-      <li class="filter" id="All"><a href="#!">All</a></li>
+      <li class="filter active" id="All"><a href="#!">All</a></li>
       <li class="filter" id="Computers"><a href="#!">Computers</a></li>
       <li class="filter" id="Finance"><a href="#!">Finance</a></li>
       <li class="filter" id="Legal"><a href="#!">Legal</a></li>
@@ -151,30 +150,31 @@
                 </div>
               </div>
             </div>
+
             <div class="row">
-            <div class="col m12">
-            <span>
-              <input name="group1" type="radio" id="1" />
-              <label for="1" class="margin-right-25">$5</label>
-            </span>
-            <span>
-              <input name="group1" type="radio" id="2" />
-              <label for="2" class="margin-right-25">$10</label>
-            </span>
-            <span>
-              <input name="group1" type="radio" id="3" />
-              <label for="3" class="margin-right-25">$25</label>
-            </span>
-            <span>
-              <input name="group1" type="radio" id="4" />
-              <label for="4" class="margin-right-25">$50</label>
-            </span>
-            <span>
-              <input name="group1" type="radio" id="5" />
-              <label for="5" class="margin-right-25">$100</label>
-            </span>
-</div>
-    </div>
+              <div class="col m12">
+                <span>
+                  <input name="group1" type="radio" id="1" />
+                  <label for="1" class="margin-right-25">$5</label>
+                </span>
+                <span>
+                  <input name="group1" type="radio" id="2" />
+                  <label for="2" class="margin-right-25">$10</label>
+                </span>
+                <span>
+                  <input name="group1" type="radio" id="3" />
+                  <label for="3" class="margin-right-25">$25</label>
+                </span>
+                <span>
+                  <input name="group1" type="radio" id="4" />
+                  <label for="4" class="margin-right-25">$50</label>
+                </span>
+                <span>
+                  <input name="group1" type="radio" id="5" />
+                  <label for="5" class="margin-right-25">$100</label>
+                </span>
+              </div>
+            </div>
               
               <div class="row">
                 <div class="col m7 card_number margin-right-10">
@@ -206,7 +206,6 @@
       </div>
     </div>
     <% end %>
-
 
   </body>
 </html>
