--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -30,7 +30,7 @@
 
            <% if @in_room %>
             <li><a id="timer_button" class="waves-effect waves-light rounded-btn green accent-4 btn tooltipped" data-position="left" data-delay="50" data-tooltip="Timer will begin"><span id="timer_text">Start Session</span></a></li>
-            <li><a href="/host_room" id="leave-room" href="#" class="tooltipped" data-position="right" data-delay="50" data-teacher-id="<%= @room.teacher_id %>" data-user-id="<%= @room.user_id %>" data-tooltip="End Session"><i id="end-session" class="fa fa-power-off fa-2x"></i></a></li>
+            <li><a href="/host_room" id="leave-room" href="#" class="tooltipped" data-position="right" data-delay="50" data-room-id="<%= @room.id %>" data-teacher-id="<%= @room.teacher_id %>" data-user-id="<%= @room.user_id %>" data-tooltip="End Session"><i id="end-session" class="fa fa-power-off fa-2x"></i></a></li>
 
           <% else %>
             <% if current_user.is_online %>
