--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -29,7 +29,7 @@
         <% if current_user %>
 
            <% if @in_room %>
-            <li><a id="timer_button" class="waves-effect waves-light rounded-btn green accent-4 btn tooltipped" data-position="left" data-delay="50" data-tooltip="Timer will begin"><span id="timer_text">Start Session</span></a></li>
+            <li><a id="timer_button" class="waves-effect waves-light rounded-btn green accent-4 btn"><span id="timer_text">Start Session</span></a></li>
 
             <li><a href="/rooms/review" id="leave-room" href="#" class="tooltipped" data-position="right" data-delay="50" data-tooltip="End Session"><i id="end-session" class="fa fa-power-off fa-2x"></i></a></li>
           <% else %>
