--- a/app/views/user/edit.erb
+++ b/app/views/user/edit.erb
@@ -1,3 +1,12 @@
+<style type="text/css">
+    .side-nav {
+    visibility: hidden;
+  }
+    #create-room {
+   visibility: hidden;
+  }
+</style>
+
 <h1>Edit Profile</h1>
 
 <!-- <div class="row"> -->
