Review page now works??

--- a/app/views/rooms/review.erb
+++ b/app/views/rooms/review.erb
@@ -15,7 +15,7 @@
       <td><%= @teacher.name %></td>
       <td><%= @time %> seconds</td>
       <td><%= @hourly_rate %> per hour</td>
-      <td><%= @total   %></td>
+      <td>Free! (Less than 10 mins)</td>
     </tr>
   </tbody>
 </table>
