Review page no works

--- a/app/views/rooms/review.erb
+++ b/app/views/rooms/review.erb
@@ -14,7 +14,7 @@
     <tr>
       <td><%= @teacher.name %></td>
       <td><%= @time %> seconds</td>
-      <td><%= @hourly_rate %> per hour</td>
+      <td>$<%= @hourly_rate %> per hour</td>
       <td>Free! (Less than 10 mins)</td>
     </tr>
   </tbody>
